--- a/styles/g3.css
+++ b/styles/g3.css
@@ -14,17 +14,17 @@
   width: 100%;
   border: 1px solid red;
 }
-img{
-  width: 100%;
- 
-  margin: 0 auto;
-}
+
+
 .bg-light{
   background-color:rgb(255,144,14,0.1) ;
 }
 /*shared style*/
 .display-flex{
   display: flex;
+}
+.text-primary{
+  color: #FF900E;
 }
 /*Dark 02*/
 .text-gray{
@@ -42,8 +42,13 @@ img{
   border-radius: 8px;
   border: none;
 }
-
-
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main>section{
+  margin-top: 130px;
+}
 /*navbar style*/
 .navbar{
  justify-content: space-between; 
@@ -68,6 +73,10 @@ img{
 }
 
 /*banner*/
+.banner-image{
+  width: 100%;
+  margin: 0 auto;}
+
 .banner-content{
   max-width: 850px;
   margin: 0 auto;
@@ -77,6 +86,34 @@ img{
 .banner-title{
   font-weight: 700;
   font-size: 4rem;
+}
+
+/*team*/
+ /*.features-content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  margin: 130px;
+*/
+.teams{
+  align-items: center;
+}
+.team-image-container{
+display: grid;
+grid-template-columns: repeat(1,2fr);
+gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+.features-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+.quick-list{
+font-weight: 500;
 }
 /*responsive*/
 @media screen and (max-width:576px) {
