--- a/styles/g3.css
+++ b/styles/g3.css
@@ -49,6 +49,10 @@ main{
 main>section{
   margin-top: 130px;
 }
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;}
+
 /*navbar style*/
 .navbar{
  justify-content: space-between; 
@@ -108,17 +112,35 @@ gap: 24px;
   margin-left: 130px;
   max-width: 530px;
 }
-.features-title{
-  font-size: 2.8rem;
-  font-weight: 700;
-}
+
+
 .quick-list{
 font-weight: 500;
 }
 /*responsive*/
 @media screen and (max-width:576px) {
-  .navbar, .nav-link{
+  .navbar,
+   .nav-link,
+   .teams{
     flex-direction: column;
   }
+.team-image-container{
+grid-template-columns: repeat(1, 1fr);
 }
+.our-features{
+  margin-left: 20px;
+}
+}
+ 
+/*medium device*/
+@media screen and (min-width:576px)and(max-width:990px){
   
+
+.teams{
+  flex-direction: column;
+  
+}
+.our-features{
+  margin: 50px auto;
+}
+}
