--- a/styles/g3.css
+++ b/styles/g3.css
@@ -117,6 +117,35 @@ gap: 24px;
 .quick-list{
 font-weight: 500;
 }
+/* some facts*/
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4 1fr);
+}
+.fact-card{
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name{
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 10px;
+}
+.fact-description{
+  max-width: 540px;
+}
+
 /*responsive*/
 @media screen and (max-width:576px) {
   .navbar,
