--- a/styles/g3.css
+++ b/styles/g3.css
@@ -108,6 +108,10 @@ display: grid;
 grid-template-columns: repeat(1,2fr);
 gap: 24px;
 }
+.facts-container{
+  justify-items: center;
+  gap: 30px;
+}
 .our-features{
   margin-left: 130px;
   max-width: 530px;
@@ -120,8 +124,13 @@ font-weight: 500;
 /* some facts*/
 .facts-container{
   display: grid;
-  grid-template-columns: repeat(4 1fr);
+  gap: 30px;
 }
+.sponsor-companies{
+  justify-items: center;
+  gap: 50px;
+}
+
 .fact-card{
   border: 1px solid #FF900E;
   width: 240px;
@@ -146,6 +155,21 @@ font-weight: 500;
   max-width: 540px;
 }
 
+/*sponsor*/
+
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px  auto;
+  text-align: center;
+}
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+.sponsor-companies img {
+  filter: grayscale(100%);
+}
+
 /*responsive*/
 @media screen and (max-width:576px) {
   .navbar,
@@ -153,7 +177,7 @@ font-weight: 500;
    .teams{
     flex-direction: column;
   }
-.team-image-container{
+.team-image-container,.sponsor-companies{
 grid-template-columns: repeat(1, 1fr);
 }
 .our-features{
@@ -163,7 +187,12 @@ grid-template-columns: repeat(1, 1fr);
  
 /*medium device*/
 @media screen and (min-width:576px)and(max-width:990px){
-  
+ .team-image-container,
+ .facts-container,
+ .sponsor-companies
+ {
+  grid-template-columns: 1fr;
+ } 
 
 .teams{
   flex-direction: column;
@@ -172,4 +201,10 @@ grid-template-columns: repeat(1, 1fr);
 .our-features{
   margin: 50px auto;
 }
+}
+
+.sponsor-companies,.facts-container{
+  grid-template-columns: repeat(3,1fr);
+  gap: 50px;
+  justify-items: center;
 }
