--- a/styles/g3.css
+++ b/styles/g3.css
@@ -121,6 +121,44 @@ gap: 24px;
 .quick-list{
 font-weight: 500;
 }
+
+/*features section*/
+
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card{
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow:0 4px 30px 0  rgba(0,0,0,06);
+margin: 20px;
+}
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1,25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  
+}
+.features{
+  gap: 30px;
+}
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#experience-years{
+  font-size: 3rem;
+  font-weight: 700;
+}
+.feature-architect img{
+width: 100%;
+}
+
 /* some facts*/
 .facts-container{
   display: grid;
@@ -169,6 +207,10 @@ font-weight: 500;
 .sponsor-companies img {
   filter: grayscale(100%);
 }
+.footer{
+  text-align: center;
+  justify-items: center;
+}
 
 /*responsive*/
 @media screen and (max-width:576px) {
@@ -184,10 +226,20 @@ grid-template-columns: repeat(1, 1fr);
   margin-left: 20px;
 }
 }
- 
+ #experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+ }
+
+
+
 /*medium device*/
 @media screen and (min-width:576px)and(max-width:990px){
- .team-image-container,
+ .teams, .features{
+  flex-direction: column;
+ }
+ 
+  .team-image-container,
  .facts-container,
  .sponsor-companies
  {
